# 7wondersPoints

./: CMakeLists.txt  bitbucket-pipelines.yml  main.cpp
src/: CMakeLists.txt  ExampleClass.cpp  ExampleClass.hpp  MathFunctions.cpp  MathFunctions.hpp
test/: CMakeLists.txt  ExampleTest.cpp  ExampleTest2.cpp  MathFunctionsTest.cpp
